<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Better Battery Log</string>
    <string name="action_settings">Settings</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="battery">Battery</string>
    <string name="new_left"> Left Battery</string>
    <string name="new_right"> Right Battery</string>
    <string name="symbol_left">L</string>
    <string name="symbol_right">R</string>
    <string name="title_activity_battery_entry">Battery Details</string>
    <string name="battery_install">Installed on</string>
    <string name="battery_died">Died on</string>
    <string name="side_select">Which hearing aid?</string>
    <string name="battery_lost">Lost or discarded?</string>
    <string name="battery_brand">Battery brand</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="delete_entry">Delete this entry?</string>
    <string name="loading">Loading...</string>
    <string name="loaded">Loaded</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="not_set">(not set)</string>
    <string name="undo">Undo Delete</string>
    <string name="empty_list_message">Welcome! Press the blue or red button above to log your first battery.</string>

    <string name="user_settings">User Settings</string>
    <string name="brand_pref">Battery brand</string>
    <string name="brand_pref_summary">Set your preferred battery brand.</string>
    <string name="ear_select">How many hearing aids</string>
    <string name="ear_select_summary">Select left, right or both.</string>
    <string name="title_activity_user_settings">User Settings</string>
    <string name="pref_which_ears">pref_which_ears</string>
    <string name="pref_which_brand">pref_which_brand</string>

    <string name="title_activity_stats">Battery Use Statistics</string>
    <string name="statistics">Statistics</string>
    <string name="action_send_report">Send Report</string>
    <string name="report_title">Hearing Aid Battery Usage</string>
    <string name="report_overall">Overall Usage Statistics</string>
    <string name="report_left">Left Battery Usage</string>
    <string name="report_right">Right Battery Usage</string>
</resources>
