<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:columnCount="3"
                android:rowCount="7"
                android:orientation="horizontal"
                tools:context="com.littleandroid.betterbatterylog.BatteryEntryActivity"
                android:id="@+id/topGridLayout"
                android:columnOrderPreserved="true"
                android:useDefaultMargins="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_select"
        android:id="@+id/sideSelectTextView"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="20dp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leftRightSwitch"
        android:layout_row="1"
        android:layout_column="1"
        android:textOn="@string/right"
        android:textOff="@string/left"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_install"
        android:id="@+id/installedOnTextView"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="20dp"
        android:textIsSelectable="false"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00/00/00"
        android:id="@+id/installDateTextView"
        android:layout_row="2"
        android:layout_column="1"
        android:textSize="20dp"
        android:layout_gravity="center_vertical"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pickInstallDateButton"
        android:layout_row="2"
        android:layout_column="2"
        android:src="@android:drawable/ic_menu_my_calendar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_died"
        android:id="@+id/diedOnTextView"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="20dp"
        android:textIsSelectable="false"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00/00/00"
        android:id="@+id/diedDateTextView"
        android:layout_row="3"
        android:layout_column="1"
        android:textSize="20dp"
        android:layout_gravity="center_vertical"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pickDiedDateButton"
        android:layout_row="3"
        android:layout_column="2"
        android:focusableInTouchMode="false"
        android:src="@android:drawable/ic_menu_my_calendar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_lost"
        android:id="@+id/wasLostTextView"
        android:layout_row="4"
        android:layout_column="0"
        android:textSize="20dp"
        android:textIsSelectable="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lostCheckBox"
        android:layout_row="4"
        android:layout_column="2"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:id="@+id/cancelButton" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/okButton" />

    </LinearLayout>

</GridLayout>
